--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,8 +20,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends libarchive-tools squashfs-tools-ng wget
 
+      - name: Install Task
+        uses: arduino/setup-task@v2
+
       - name: Download ISO
-        run: wget ${{ inputs.url }}
+        run: wget -q ${{ inputs.url }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
