--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,10 +69,10 @@ jobs:
         run: task push
 
       - name: Cleanup old packages
-        uses: actions/delete-package-versions@v5
+        uses: dataaxiom/ghcr-cleanup-action@v1
         if: github.event_name == 'schedule'
         with:
-          package-name: vyos
-          package-type: container
-          min-versions-to-keep: 7
-          ignore-versions: stream
+          dry-run: true
+          package: vyos
+          keep-n-tagged: 7
+          exclude-tagged: '*stream*'
